[package]
name = "sqlx-pg-ext-uint"
version = "0.1.0"
edition = "2024"
authors = [
    "shenjackyuanjie <3695888@qq.com>"
]

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres"] }

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
