[package]
name = "sqlx-pg-ext-uint"
version = "0.1.1"
edition = "2024"
authors = [
    "tianxiu2b2t <atiaxniua@163.com>",
    "shenjackyuanjie <3695888@qq.com>",
]
description = "A Simple Extension for SQLX to support postgres uint128"
license = "MIT"
repository = "https://github.com/HWSServer/sqlx-pg-ext-uint"
homepage = "https://github.com/HWSServer/sqlx-pg-ext-uint"
keywords = ["sqlx", "postgres", "uint128"]

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres"] }

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
